# nyx-chat

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODEBASE_BRAIN_DUMP.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  DEPLOYMENT.md  FIXES.md  GEMINI.md  I18N_AUDIT.md  QWEN.md  README.md  SECURITY.md  SECURITY_AUDIT.md  analysis.md  app-guide.md  app-summary.md  docker-compose.yml  e2e-testing-setup.md  fix-auth.patch  fix-nyx-chat.md  hasil-analis-lanjutan.md  hasil-analis.md  main.diff  new.diff  new_key_flow.diff  nginx.conf  opfs_plan.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  privacy-hardening.md  prompt-analis-2.md  ratchet.diff  rebrand.sh  secure-session-storage.md  server_lint_report.txt  server_lint_report_phase3.txt  (+10 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
marketing/: .gitignore  astro.config.mjs  eslint.config.js  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
scripts/: refactor-catch.js  update-md.js  update-md.mjs
server/: .env.example  .eslintrc.json  .gitignore  Dockerfile  ca.pem  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  prisma.config.ts  tsconfig.json
server/transport-sidecar/: .gitignore  Cargo.toml  test.rs  transport_cert.der  transport_key.der
server/transport-sidecar/src/: main.rs
web/: .env.example  .gitignore  Dockerfile  eslint.config.js  fix-imports.cjs  fix-imports.js  fix-syntax.cjs  index.html  new.diff  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  (+1 more)
(+392 files in other folders)
